--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Orbitron|Russo+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="http://localhost:3000/armada.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="armada.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
