added notification for adding a ship, migrated to font awesome
diff --git a/client/public/armada.css b/client/public/armada.css
index 18063eeb..1ff7f15f 100644
--- a/client/public/armada.css
+++ b/client/public/armada.css
@@ -583,7 +583,7 @@ textarea { float: left; }
 Landing Page
 ****************/
 .landing-img {
-    height: 300px;
+    height: 100px;
     transition: all 0.4s;
 }
 .landing-img:hover {
@@ -598,7 +598,7 @@ Landing Page
     justify-content: center;
 }
 .content-row {
-    height: 90vh;
+    height: 100vh;
     display: flex;
     align-items: center;
 }
diff --git a/client/public/index.html b/client/public/index.html
index 568020b3..d116fd9e 100644
--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="grid.css">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Orbitron|Russo+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="http://localhost:3000/armada.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
diff --git a/client/src/Components/Body/Landing.js b/client/src/Components/Body/Landing.js
index 00fab1fa..c9cf778d 100644
--- a/client/src/Components/Body/Landing.js
+++ b/client/src/Components/Body/Landing.js
@@ -1,5 +1,6 @@
 import React from 'react';
 import {Link} from 'react-router-dom';
+import '../css/Landing.css';

 class Landing extends React.Component{

@@ -7,9 +8,6 @@ class Landing extends React.Component{

        

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="grid.css">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Orbitron|Russo+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="http://localhost:3000/armada.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
